initial set-up. authentication done. console log in place to get artist info.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
     <title>SchoolRadio</title>
   </head>
   <body>
-    <div id="post">
-      
+  <div class="container">
+    <div>
+      <form id="artistForm">
+       <label for="artist">Type in the name of an artist</label>
+       <input id="artist" type="text" name="artist">
+       <button type="submit" name="button">Submit</button>
+    </form>
     </div>
-
+  </div>
   </body>
 
 </html>
