--- a/index.html
+++ b/index.html
@@ -2,22 +2,23 @@
 <html>
   <head>
     <link rel="stylesheet" href="build/css/vendor.css">
-    <link rel="stylesheet" href="/css/styles.css">
+    <!-- <link rel="stylesheet" href="/css/styles.css"> -->
     <script src="build/js/vendor.min.js"></script>
     <script type="text/javascript" src="build/js/app.js"></script>
     <meta charset="utf-8">
     <title>SchoolRadio</title>
   </head>
   <body>
-  <div class="container">
-    <div>
-      <form id="artistForm">
-       <label for="artist">Type in the name of an artist</label>
-       <input id="artist" type="text" name="artist">
-       <button type="submit" name="button">Submit</button>
-    </form>
+    <div class="container">
+      <div>
+        <form id="artistForm">
+         <label for="artist">Type in the name of an artist</label>
+         <input id="artist" type="text" name="artist">
+         <button type="submit" name="button">Submit</button>
+       </form>
+      </div>
+      <div id ="artist-display">
+      </div>
     </div>
-  </div>
   </body>
-
 </html>
