--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
   <body>
     <div class="container">
       <div>
-        <form id="artistForm">
-         <label for="artist">Type in the name of an artist</label>
-         <input id="artist" type="text" name="artist">
+        <form id="gifForm">
+         <label for="gif">Type in the name of a gif</label>
+         <input id="gif" type="text" name="gif">
          <button type="submit" name="button">Submit</button>
        </form>
       </div>
-      <div id ="artist-display">
+      <div id ="gif-display">
       </div>
     </div>
+
   </body>
 </html>
